turtleart.lessons.turtleart.Main.CircleYing.scala.error
Source:8: error: angle is already defined as value angle
		val angle:Double = 1
                    ^Source:13: error: angle is already defined as value angle
		val angle:Double = 1
                    ^