turtleart.lessons.turtleart.Main.CircleYing.scala.code
override def run() {
	val angle:Double = 1
	for ( i<- 0 to 359 ) {
		avance(2)
		droite(angle)
	}
		val angle:Double = 1
	for ( i<- 1 to 180 ) {
		avance(1)
		droite(angle)
	}
		val angle:Double = 1
	for ( i<- 1 to 160 ) {
		avance(1)
		gauche(angle)
	}
}
